fix align of navIcon

--- a/css/top.css
+++ b/css/top.css
@@ -200,7 +200,7 @@ header.top div.topNav div.navIcon i {
   header.top div.topNav div.navIcon i {
     display: block;
     position: absolute;
-    top: 28px;
+    top: 24px;
     right: 18px;
     cursor: pointer;
     color: white;
